--- a/bio2.html
+++ b/bio2.html
@@ -52,7 +52,7 @@
 
             <div class="bg-white rounded-xl shadow-lg p-6 flex flex-col items-center">
                 <div class="product-image-container">
-                    <a href="https://www.healthking.com.tw/product/intro/8?srsltid=AfmBOoq_e0j5d8CwWuEpONMFceVQpNHJgTJCgabaV6XAFgDCP1E1V5rx" target="_blank" rel="noopener noreferrer" class="cursor-pointer">
+                    <a href="https://www.healthking.com.tw/product/intro/8" target="_blank" rel="noopener noreferrer" class="cursor-pointer">
                         <img src="250711p-shysj-1920w.jpg" alt="康成志業 舒活益生菌" class="rounded-lg transition-transform duration-300 hover:scale-105">
                     </a>
                 </div>
@@ -74,10 +74,10 @@
                     </thead>
                     <tbody>
                         <tr class="bg-white border-b"><td class="px-6 py-4 font-medium text-gray-900">產品劑型</td><td class="px-6 py-4 bg-emerald-50">錠劑 (Tablet)</td><td class="px-6 py-4">粉包 (Powder Sachet)</td></tr>
-                        <tr class="bg-white border-b"><td class="px-6 py-4 font-medium text-gray-900">總菌數 (CFU)</td><td class="px-6 py-4 bg-emerald-50 font-bold text-emerald-700">✅ 明確標示：100億 / 每錠</td><td class="px-6 py-4 font-semibold text-red-600">❌ 未標示</td></tr>
-                        <tr class="bg-white border-b"><td class="px-6 py-4 font-medium text-gray-900">菌株種類數</td><td class="px-6 py-4 bg-emerald-50 font-bold text-emerald-700">✅ 10 種菌株</td><td class="px-6 py-4">5-6 種菌株</td></tr>
-                        <tr class="bg-white border-b"><td class="px-6 py-4 font-medium text-gray-900">專利/特色技術</td><td class="px-6 py-4 bg-emerald-50 font-semibold">Bio-tract® 專利傳輸技術<br><small>(保護益菌存活)</small></td><td class="px-6 py-4">Vf136 綜合蔬果酵素<br><small>(額外添加)</small></td></tr>
-                        <tr class="bg-white border-b"><td class="px-6 py-4 font-medium text-gray-900">額外添加物</td><td class="px-6 py-4 bg-emerald-50">成分單純，主要為錠劑賦形劑</td><td class="px-6 py-4 text-red-600">含D-甘露醇(甜味劑)、乳糖、香料、奶粉等</td></tr>
+                        <tr class="bg-white border-b"><td class="px-6 py-4 font-medium text-gray-900">總菌數 (CFU)</td><td class="px-6 py-4 bg-emerald-50 font-bold text-emerald-700">✅ 明確標示：100億 / 每錠<br><small>(保證菌數)</small></td><td class="px-6 py-4 font-semibold text-gray-700">標示：高達100億 / 每包<br><small>(最高菌數)</small></td></tr>
+                        <tr class="bg-white border-b"><td class="px-6 py-4 font-medium text-gray-900">菌株種類數</td><td class="px-6 py-4 bg-emerald-50 font-bold text-emerald-700">✅ 10 種多元菌株</td><td class="px-6 py-4">5 種菌株</td></tr>
+                        <tr class="bg-white border-b"><td class="px-6 py-4 font-medium text-gray-900">專利/特色技術</td><td class="px-6 py-4 bg-emerald-50 font-semibold">Bio-tract® 專利傳輸技術<br><small>(控制釋放，保護益菌)</small></td><td class="px-6 py-4">三層包埋技術<br><small>(保護益菌)</small></td></tr>
+                        <tr class="bg-white border-b"><td class="px-6 py-4 font-medium text-gray-900">額外添加物</td><td class="px-6 py-4 bg-emerald-50">成分單純，主要為錠劑賦形劑</td><td class="px-6 py-4 text-red-600">含糖(0.9g/包)、乳糖、香料、奶粉等</td></tr>
                         <tr class="bg-white"><td class="px-6 py-4 font-medium text-gray-900">過敏原/飲食</td><td class="px-6 py-4 bg-emerald-50 font-semibold text-emerald-700">✅ 全素可食、不含麩質/乳糖</td><td class="px-6 py-4 text-red-600">❌ 含乳糖、牛奶製品</td></tr>
                     </tbody>
                 </table>
@@ -86,29 +86,28 @@
 
         <div class="space-y-8 mb-10">
             <h3 class="text-2xl font-bold mb-6 text-center">深入專業分析</h3>
-            <div class="bg-white rounded-xl shadow-lg p-6 md:p-8"><h4 class="text-xl font-bold mb-4 text-gray-800">分析一：菌數與菌種 (最重要的指標)</h4><p class="mb-3"><strong class="text-emerald-700">美安 益生十菌：</strong>最大優勢在於資訊透明，明確標示每錠含100億CFU有效菌數，並提供10種多樣化菌株，符合「多菌種、足菌量」的優質益生菌標準，能提供更全面的支持。</p><p><strong class="text-red-700">康成志業 舒活益生菌：</strong>關鍵資訊缺口是未標示總菌數(CFU)，消費者無法得知補充的實際菌量。菌種數量也較少，支持的廣度可能有限。</p></div>
-            <div class="bg-white rounded-xl shadow-lg p-6 md:p-8"><h4 class="text-xl font-bold mb-4 text-gray-800">分析二：存活與傳輸技術</h4><p class="mb-3"><strong class="text-emerald-700">美安 益生十菌：</strong>採用Bio-tract®專利包覆技術，能有效保護益生菌通過胃酸，確保更多活菌抵達腸道發揮作用。這項技術直接解決了益生菌補充的核心挑戰。</p><p><strong class="text-gray-600">康成志業 舒活益生菌：</strong>額外添加蔬果酵素，主要功能是幫助食物分解，而非保護益生菌本身。雖然有助消化，但對於益生菌的存活率沒有直接幫助。</p></div>
-            <div class="bg-white rounded-xl shadow-lg p-6 md:p-8"><h4 class="text-xl font-bold mb-4 text-gray-800">分析三：成分與添加物 (純淨度的重要性)</h4><p class="mb-3"><strong class="text-emerald-700">美安 益生十菌：</strong>成分單純乾淨，不含多餘添加劑，且排除常見過敏原（麩質、乳糖、大豆），適合更廣泛的族群。純淨的配方確保您補充的是真正需要的好菌，而不是額外的身體負擔。</p><p><strong class="text-red-700">康成志業 舒活益生菌：</strong>為了提升口感，添加了甜味劑、香料、乳糖和奶粉。值得注意的是，部分為了降低成本的甜味劑（如高果糖糖漿）可能在製造過程中殘留除草劑等物質，這些物質已被證實會傷害腸道益生菌的存活。對於正在努力補充好菌的人來說，這類添加物反而可能造成干擾。</p></div>
-            <div class="bg-white rounded-xl shadow-lg p-6 md:p-8"><h4 class="text-xl font-bold mb-4 text-gray-800">分析四：應對現代環境挑戰 (獨特菌株的價值)</h4><p class="mb-3">優質的益生菌不僅是調整消化，更能幫助身體應對無可避免的環境毒素。現代研究指出，我們每週都可能透過飲食和包材攝入相當於一張信用卡的「塑膠微粒」。</p><p class="mb-3"><strong class="text-emerald-700">美安 益生十菌：</strong>特別含有經研究證實的「塑膠獵人」菌株：<strong class="text-emerald-800">植物乳酸桿菌</strong>與<strong class="text-emerald-800">副乾酪乳酸菌</strong>。這兩種菌株能幫助身體吸附並排出惱人的塑膠微粒，減少體內殘留。這意味著，選擇美安不僅是為了腸道健康，更是為身體增加一道對抗環境污染的防線。</p><p><strong class="text-gray-600">康成志業 舒活益生菌：</strong>產品未特別標示是否含有這類具特定功能的菌株，其主要訴求仍在於傳統的消化道保健，對於應對塑膠微粒等現代環境議題，則沒有提供明確的支持。</p></div>
+            <div class="bg-white rounded-xl shadow-lg p-6 md:p-8"><h4 class="text-xl font-bold mb-4 text-gray-800">分析一：菌數與菌種 (效果的廣度與確定性)</h4><p class="mb-3"><strong class="text-emerald-700">美安 益生十菌：</strong>優勢在於「資訊確定性」與「菌株多樣性」。<strong class="text-emerald-800">明確標示每錠含有100億CFU</strong>，這是一個保證值，讓您清楚知道吃下多少好菌。同時提供<strong class="text-emerald-800">10種多元菌株</strong>，能更全面地支持腸道菌叢平衡。</p><p><strong class="text-gray-600">康成志業 舒活益生菌：</strong>標示「高達100億」，這代表菌數的「最高值」而非保證值。菌種數量為5種，雖然也不錯，但在支援的廣度上可能不如10種菌株來得全面。</p></div>
+            <div class="bg-white rounded-xl shadow-lg p-6 md:p-8"><h4 class="text-xl font-bold mb-4 text-gray-800">分析二：存活與傳輸技術</h4><p class="mb-3"><strong class="text-emerald-700">美安 益生十菌：</strong>採用國際專利 <strong class="text-emerald-800">Bio-tract® 技術</strong>，不僅能保護益菌通過胃酸，其「控制釋放」的特性，能像智慧膠囊一樣，在腸道中緩慢釋放活菌，延長作用時間，這是它非常核心的技術優勢。</p><p><strong class="text-gray-600">康成志業 舒活益生菌：</strong>採用常見的「三層包埋技術」，主要功能是保護益生菌抵抗胃酸和膽鹼，確保存活。這也是一項有效的技術，但相較於Bio-tract®的緩釋功能，作用機制較為單純。</p></div>
+            <div class="bg-white rounded-xl shadow-lg p-6 md:p-8"><h4 class="text-xl font-bold mb-4 text-gray-800">分析三：成分與添加物 (純淨度的重要性)</h4><p class="mb-3"><strong class="text-emerald-700">美安 益生十菌：</strong>成分單純乾淨，不含多餘添加劑，且排除常見過敏原（麩質、乳糖、大豆），適合更廣泛的族群。純淨的配方確保您補充的是真正需要的好菌，而不是額外的身體負擔。</p><p><strong class="text-red-700">康成志業 舒活益生菌：</strong>為了提升口感，添加了香料與糖。根據營養標示，每2公克的粉末中就含有<strong class="text-red-800">0.9公克的糖</strong>，對於需要控制糖分攝取或追求成分純淨的人來說，可能不是最理想的選擇。</p></div>
+            <div class="bg-white rounded-xl shadow-lg p-6 md:p-8"><h4 class="text-xl font-bold mb-4 text-gray-800">分析四：應對現代環境挑戰 (獨特菌株的價值)</h4><p class="mb-3">優質的益生菌不僅是調整消化，更能幫助身體應對無可避免的環境毒素。現代研究指出，我們每週都可能透過飲食和包材攝入相當於一張信用卡的「塑膠微粒」。</p><p class="mb-3"><strong class="text-emerald-700">美安 益生十菌：</strong>特別含有經研究證實的「塑膠獵人」菌株：<strong class="text-emerald-800">植物乳酸桿菌</strong>與<strong class="text-emerald-800">副乾酪乳酸桿菌</strong>。這兩種菌株能幫助身體吸附並排出惱人的塑膠微粒。選擇美安不僅是為了腸道健康，更是為身體增加一道對抗環境污染的防線。</p><p><strong class="text-gray-600">康成志業 舒活益生菌：</strong>產品成分中也包含副乾酪乳酸桿菌，但未特別強調此功能。其主要訴求仍在於傳統的消化道保健，對於應對塑膠微粒等現代環境議題，則沒有提供明確的支持。</p></div>
             <div class="bg-white rounded-xl shadow-lg p-6 md:p-8"><h4 class="text-xl font-bold mb-4 text-gray-800">分析五：哪一款更適合您？(適用族群對比)</h4><p class="mb-3"><strong class="text-emerald-700">美安 益生十菌 適合這樣的您：</strong><ul class="list-disc list-inside ml-4 text-gray-700 space-y-1"><li><strong class="font-semibold">追求高標準：</strong>希望成分單純、無多餘添加物，且菌數、菌種公開透明。</li><li><strong class="font-semibold">特定飲食需求者：</strong>全素可食，且不含麩質、乳糖，適合過敏體質或乳糖不耐者。</li><li><strong class="font-semibold">生活忙碌者：</strong>錠劑形式方便攜帶，無需沖泡，隨時可補充。</li><li><strong class="font-semibold">希望全面調理者：</strong>10種多元菌株，提供更廣泛的健康支持。</li></ul></p><p class="mt-4"><strong class="text-gray-600">康成志業 舒活益生菌 可能適合：</strong><ul class="list-disc list-inside ml-4 text-gray-700"><li>對成分要求不高，且喜歡透過額外添加物（如酵素、甜味劑）獲得附加功能或口感者。</li><li>沒有乳糖不耐問題，且不介意產品中含有奶粉、香料等成分。</li></ul></p></div>
         </div>
 
         <div class="space-y-8 mb-10">
             <h3 class="text-2xl font-bold mb-6 text-center">常見問題解答 (Q&A)</h3>
-            <div class="bg-white rounded-xl shadow-lg p-6 md:p-8"><h4 class="text-lg font-semibold mb-2 text-gray-800">問：錠劑跟粉包，哪種益生菌比較好？</h4><p class="text-gray-700">答：這是一個常見的迷思。產品的「劑型」不是決定效果的唯一關鍵，更重要的是「傳輸技術」。傳統的益生菌粉末或未經保護的錠劑，在抵達腸道前就會被胃酸大量破壞。美安益生十菌採用的 <strong class="text-emerald-700">Bio-tract® 專利技術</strong>，能像潛水艇一樣保護菌株，定時緩慢釋放，確保活菌能真正抵達作用區域。因此，<strong class="text-emerald-700">有專利保護的錠劑，其存活率遠高於普通的粉包</strong>。</p></div>
-            <div class="bg-white rounded-xl shadow-lg p-6 md:p-8"><h4 class="text-lg font-semibold mb-2 text-gray-800">問：為什麼菌株種類多樣性很重要？</h4><p class="text-gray-700">答：我們的腸道中有數百種不同的菌叢，就像一個生態系。補充單一或少數幾種菌株，就像只在森林裡種一種樹，幫助有限。補充像美安益生十菌這樣<strong class="text-emerald-700">多達10種的菌株</strong>，能更全面地支持腸道菌叢的平衡與健康，應對更複雜的環境挑戰。</p></div>
+            <div class="bg-white rounded-xl shadow-lg p-6 md:p-8"><h4 class="text-lg font-semibold mb-2 text-gray-800">問：錠劑跟粉包，哪種益生菌比較好？</h4><p class="text-gray-700">答：這是一個常見的迷思。產品的「劑型」不是決定效果的唯一關鍵，更重要的是「傳輸技術」。傳統的益生菌粉末或未經保護的錠劑，在抵達腸道前就會被胃酸大量破壞。美安益生十菌採用的 <strong class="text-emerald-700">Bio-tract® 專利技術</strong>，能像潛水艇一樣保護菌株，並在腸道中緩慢釋放，確保活菌能真正抵達作用區域。因此，<strong class="text-emerald-700">有專利保護的錠劑，其存活率與作用時間遠高於普通的粉包</strong>。</p></div>
         </div>
         
         <div class="bg-emerald-50 border-l-4 border-emerald-500 text-emerald-900 p-6 rounded-r-lg shadow-lg">
             <h3 class="text-2xl font-bold mb-4">結論：為您的健康做出最精明的選擇</h3>
-            <p class="text-lg mb-4">綜合<strong class="text-xl">規格、技術、成分純淨度與獨特功能</strong>等多重面向的客觀分析，我們強烈推薦您選擇：<strong class="text-xl">「美安 益生十菌錠狀食品 (Probiotics-10)」</strong>。</p>
+            <p class="text-lg mb-4">綜合<strong class="text-xl">菌株多樣性、成分純淨度、技術先進性與資訊確定性</strong>等多重面向的客觀分析，我們更推薦：<strong class="text-xl">「美安 益生十菌錠狀食品 (Probiotics-10)」</strong>。</p>
             <ul class="list-disc list-inside space-y-2">
-                <li><strong class="font-semibold">資訊透明，效果可預期：</strong>明確標示100億菌數。</li>
-                <li><strong class="font-semibold">菌種多元，支持更全面：</strong>10種菌株協同作戰。</li>
-                <li><strong class="font-semibold">專利技術，確保存活率：</strong>Bio-tract®技術讓每一分錢都花在刀口上。</li>
-                <li><strong class="font-semibold">成分乾淨，適用人群廣：</strong>無多餘添加物，素食者與過敏者首選。</li>
+                <li><strong class="font-semibold">資訊更透明：</strong>明確標示100億「保證」菌數，效果可預期。</li>
+                <li><strong class="font-semibold">菌種更多元：</strong>10種菌株提供更全面的腸道菌叢支持。</li>
+                <li><strong class="font-semibold">核心技術更先進：</strong>Bio-tract®緩釋技術讓好菌作用時間更長。</li>
+                <li><strong class="font-semibold">成分更純淨：</strong>無額外添加糖、香料，適合廣泛族群。</li>
             </ul>
-            <p class="mt-4">投資健康，需要的是數據與科學，而非模糊不清的標示。選擇美安益生十菌，是為自己和家人的長遠福祉，做出一個清晰、可靠且高效的決定。</p>
+            <p class="mt-4">投資健康，需要的是清晰的數據與科學。選擇美安益生十菌，是為自己和家人的長遠福祉，做出一個更清晰、可靠且高效的決定。</p>
             <div class="mt-6 text-center">
                 <a href="https://tw.shop.com/0912559509/-1842397195-p.xhtml?credituser=C1757928924" target="_blank" rel="noopener noreferrer" class="inline-block bg-emerald-600 text-white font-bold py-3 px-8 rounded-lg shadow-md hover:bg-emerald-700 transition-colors duration-300">
                     立即了解或安心購買
@@ -117,7 +116,7 @@
         </div>
 
         <footer class="text-center mt-10 text-sm text-gray-500">
-            <p>免責聲明：本分析基於產品包裝及公開資訊，並參考專業講師意見，僅供參考，不構成任何醫療建議。請根據個人情況諮詢專業人士。</p>
+            <p>免責聲明：本分析基於產品公開資訊，並參考專業講師意見，僅供參考，不構成任何醫療建議。請根據個人情況諮詢專業人士。</p>
             <p>&copy; 2025 產品比較分析. All rights reserved.</p>
         </footer>
     </div>
